@@ -31,6 +31,8 @@ class SqliteUpdater extends DatabaseUpdater {
 
 	protected function getCoreUpdateList() {
 		return array(
+			array( 'disableContentHandlerUseDB' ),
+
 			// 1.14
 			array( 'addField', 'site_stats',    'ss_active_users',  'patch-ss_active_users.sql' ),
 			array( 'doActiveUsersInit' ),
@@ -95,6 +97,7 @@ class SqliteUpdater extends DatabaseUpdater {
 			array( 'addField', 'archive',  'ar_content_format',  'patch-archive-ar_content_format.sql' ),
 			array( 'addField', 'archive',  'ar_content_model',   'patch-archive-ar_content_model.sql' ),
 			array( 'addField', 'page',     'page_content_model', 'patch-page-page_content_model.sql' ),
+			array( 'enableContentHandlerUseDB' ),
 
 			array( 'dropField', 'site_stats',    'ss_admins',         'patch-drop-ss_admins.sql' ),
 			array( 'dropField', 'recentchanges', 'rc_moved_to_title', 'patch-rc_moved.sql' ),
